src/components/ProductDetails/ProductDetails.css
.product-details {
  padding: 20px;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 5px;
  position: fixed;
  top: 20%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1000;
  width: 80%;
  max-width: 600px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.close-button {
  position: absolute;
  top: 5px;
  right: 5px;
  background: #f44336;
  color: #fff;
  border: none;
  width: 55px;
  height: 30px;
  border-radius: 50%;
  font-size: 18px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}

.close-button:hover {
  background: #c62828;
}

.reviews-section {
  margin-top: 20px;
}

.review-item {
  border-bottom: 1px solid #ddd;
  padding: 10px 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.review-item:last-child {
  border-bottom: none;
}

.review-item p {
  margin: 0;
  flex: 1;
  min-width: 0;
}

.star-rating {
  display: flex;
  margin-left: 10px;
}

.star {
  cursor: pointer;
  font-size: 20px;
  color: #ddd;
  margin-left: 5px;
}

.star.filled {
  color: #ff9800;
}

.low-stock {
  color: red;
  font-weight: bold;
}

.left-text {
  color: red;
}

.add-review-form {
  margin-top: 20px;
}

.add-review-form textarea {
  width: 100%;
  height: 100px;
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 5px;
  resize: none;
  font-size: 16px;
}

